force-app/main/default/objects/Parents__c/fields/Job_Sector__c.field-meta.xml
<CustomField>
    <fullName>Job_Sector__c</fullName>
    <label>Job Sector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>