force-app/main/default/objects/Parents__c/fields/Parentship__c.field-meta.xml
<CustomField>
    <fullName>Parentship__c</fullName>
    <label>Parentship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>