force-app/main/default/objects/Parents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aadhar_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Age__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Job_Sector__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Salary__c</columns>
    <columns>Parentship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>